# lua-patcher

./: .gitignore  CMakeLists.txt  app.rc  build.bat  check_shortcuts.ps1  installer.iss  luapatcher_restart_debug_not showing.txt  luapatcher_restart_debug_showing.txt  make_hq_icon.py  manifests.ps1  monitor_steam.ps1  resources.qrc  temp_mainwindow.cpp  temp_mainwindow.h
.github/workflows/: build.yml  release.yml
PulseFramework/: CMakeLists.txt
PulseFramework/PulseUI/: CMakeLists.txt  main.cpp  overlaywindow.cpp  overlaywindow.h
PulseFramework/src/: proxy.cpp  pulse.cpp
chat-server/: .env  package-lock.json  package.json  server.js  ws_client.js
src/: chatpage.cpp  chatpage.h  config.h  customtitlebar.cpp  friendpopover.cpp  friendpopover.h  gamedetailspage.cpp  glassbutton.cpp  loadingdialog.cpp  loadingdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  materialicons.h  notificationdialog.cpp  onboardingdialog.cpp  onboardingdialog.h  userprofiledialog.cpp  userprofiledialog.h
src/workers/: generatorworker.cpp  generatorworker.h  luadownloadworker.cpp  luadownloadworker.h  restartworker.cpp  restartworker.h  steampatchworker.cpp  steampatchworker.h
webserver/: app.py  mainfest.py
