cmake_minimum_required(VERSION 3.16)
project(LuaPatcher VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# Option for static build
option(BUILD_STATIC "Build with static Qt libraries" OFF)

# Server access token - passed via macro during compilation
if(DEFINED ENV{SERVER_ACCESS_TOKEN})
    set(ACCESS_TOKEN "$ENV{SERVER_ACCESS_TOKEN}" CACHE STRING "Access token for the server" FORCE)
else()
    set(ACCESS_TOKEN "dev-token-replace-in-prod" CACHE STRING "Access token for the server")
endif()
add_definitions(-DSERVER_ACCESS_TOKEN="${ACCESS_TOKEN}")

# Find Qt6 - Core components + optional Svg
find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Network)
find_package(Qt6 QUIET COMPONENTS Svg)

# Application icon resource (optional)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/app.rc")
    set(APP_ICON_RESOURCE_WINDOWS "${CMAKE_CURRENT_SOURCE_DIR}/app.rc")
else()
    set(APP_ICON_RESOURCE_WINDOWS "")
endif()

# Copy logo.ico to the build directory so it can be found at runtime
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/icon.ico" "${CMAKE_BINARY_DIR}/icon.ico" COPYONLY)

# Source files
set(SOURCES
    src/main.cpp
    src/mainwindow.cpp
    src/glassbutton.cpp
    src/gamecard.cpp
    src/gamedetailspage.cpp
    src/addfrienddialog.cpp
    src/loadingspinner.cpp
    src/workers/indexdownloadworker.cpp
    src/workers/luadownloadworker.cpp
    src/workers/generatorworker.cpp
    src/workers/restartworker.cpp
    src/workers/steampatchworker.cpp
    src/utils/paths.cpp
    src/utils/colors.cpp
    src/terminaldialog.cpp
    src/onboardingdialog.cpp
    src/customtitlebar.cpp
    src/socialpage.cpp
    src/profilecard.cpp
    src/notificationdialog.cpp
    src/chatpage.cpp
    src/friendpopover.cpp
    src/userprofiledialog.cpp
    src/loadingdialog.cpp
)

set(HEADERS
    src/mainwindow.h
    src/glassbutton.h
    src/gamecard.h
    src/gamedetailspage.h
    src/loadingspinner.h
    src/workers/indexdownloadworker.h
    src/workers/luadownloadworker.h
    src/workers/generatorworker.h
    src/workers/restartworker.h
    src/workers/steampatchworker.h
    src/utils/paths.h
    src/utils/colors.h
    src/config.h
    src/terminaldialog.h
    src/onboardingdialog.h
    src/customtitlebar.h
    src/socialpage.h
    src/profilecard.h
    src/notificationdialog.h
    src/chatpage.h
    src/friendpopover.h
    src/userprofiledialog.h
    src/loadingdialog.h
)

# Add static plugin initialization for static builds
if(BUILD_STATIC)
    list(APPEND SOURCES src/static_plugins.cpp)
endif()

# Create executable
if(WIN32 AND APP_ICON_RESOURCE_WINDOWS)
    # Compile icon resource separately to avoid autogen include issues
    add_library(AppIcon OBJECT "${APP_ICON_RESOURCE_WINDOWS}")
    set_target_properties(AppIcon PROPERTIES 
        AUTOMOC OFF 
        AUTOUIC OFF 
        AUTORCC OFF
    )
    add_executable(LuaPatcher WIN32 ${SOURCES} ${HEADERS} $<TARGET_OBJECTS:AppIcon>)
else()
    add_executable(LuaPatcher ${SOURCES} ${HEADERS})
endif()

# Link Qt libraries
target_link_libraries(LuaPatcher PRIVATE
    Qt6::Core
    Qt6::Gui
    Qt6::Widgets
    Qt6::Network
    dwmapi
)

# Optionally link Qt6Svg if available
if(TARGET Qt6::Svg)
    target_link_libraries(LuaPatcher PRIVATE Qt6::Svg)
    target_compile_definitions(LuaPatcher PRIVATE HAS_QT_SVG=1)
    message(STATUS "Qt6Svg found - using SVG icon engine")
else()
    message(STATUS "Qt6Svg NOT found - using fallback QPainterPath icons")
endif()

# Static build configuration
if(BUILD_STATIC)
    # Link static Qt plugins (only core plugins available in qtbase)
    target_link_libraries(LuaPatcher PRIVATE
        Qt6::QWindowsIntegrationPlugin
        Qt6::QGifPlugin
        Qt6::QJpegPlugin
        Qt6::QICOPlugin
        Qt6::QWindowsVistaStylePlugin
    )
    
    # Windows static linking flags for MSVC
    if(MSVC)
        set_property(TARGET LuaPatcher PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded")
    endif()
    
    # Windows static linking flags for MinGW
    if(MINGW)
        target_link_options(LuaPatcher PRIVATE -static -static-libgcc -static-libstdc++)
    endif()
    
    # Define static build macro
    target_compile_definitions(LuaPatcher PRIVATE QT_STATIC_BUILD)
endif()

# Windows-specific settings
if(WIN32 AND CMAKE_BUILD_TYPE STREQUAL "Release")
    set_target_properties(LuaPatcher PROPERTIES
        WIN32_EXECUTABLE TRUE
    )
endif()

# Install
install(TARGETS LuaPatcher
    RUNTIME DESTINATION bin
)

# Strip executable in Release mode to prevent Antivirus ML false positives
if(MINGW AND CMAKE_BUILD_TYPE STREQUAL "Release")
    add_custom_command(TARGET LuaPatcher POST_BUILD
        COMMAND strip $<TARGET_FILE:LuaPatcher>
        COMMENT "Stripping executable to bypass Windows Defender ML heuristics..."
    )
endif()

# Copy icons to output directory
add_custom_command(TARGET LuaPatcher POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    "${CMAKE_SOURCE_DIR}/icon.ico"
    "$<TARGET_FILE_DIR:LuaPatcher>/icon.ico"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    "${CMAKE_SOURCE_DIR}/icon.png"
    "$<TARGET_FILE_DIR:LuaPatcher>/icon.png"
    COMMAND ${CMAKE_COMMAND} -E copy_if_different
    "${CMAKE_SOURCE_DIR}/login_bg.png"
    "$<TARGET_FILE_DIR:LuaPatcher>/login_bg.png"
)
